新增验证码查询 新增对段子自动点赞功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
         </activity>
         <activity android:name=".ui.SystemSettingActivity">
         </activity>
+        <activity android:name=".ui.VerificationCodeActivity">
+        </activity>
     </application>
 
 </manifest>
