批量添加用户

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
         </activity>
         <activity android:name=".ui.VerificationCodeActivity">
         </activity>
+        <activity android:name=".ui.AutoAddUserActicity">
+        </activity>
     </application>
 
 </manifest>
